--- a/biography/index.jade
+++ b/biography/index.jade
@@ -29,6 +29,6 @@ html(lang="ru")
 					p Burliuk’s deep involvement in the world also manifests itself in his important works focused on ideological, philosophical themes dealing with war and the human condition.
 					p David Burliuk died on Long Island in 1967. That same year he was honored posthumously by being inducted into the American Academy of Arts and Letters.
 					p
-						a(href="#") David Davidovich Burliuk Biography ukrainianmuseum.org
+						a(href="http://ukrainianmuseum.org/burliuk/?q=node/1" target="_blank" rel="nofollow noopener" title="David Davidovich Burliuk Biography ukrainianmuseum.org") David Davidovich Burliuk Biography ukrainianmuseum.org
 		include ../jade/block/footer.jade
 		include ../jade/meta/js.jade
