--- a/jade/block/nav.jade
+++ b/jade/block/nav.jade
@@ -5,9 +5,9 @@
 			.overlay-content
 				a(href="/") Home
 				a(href="/biography/") Biography
-				a(href="#") Catalogue Raisonné
-				a(href="#") Contact
-				a(href="#") Directors, Advisors & Staff
-				a(href="#") User's Policy
+				a(href="/catalogue-raisonne/") Catalogue Raisonné
+				a(href="/contact/") Contact
+				a(href="/directors-advisors-staff/") Directors, Advisors & Staff
+				a(href="/user's-policy/") User's Policy
 	a.social(href="https://www.facebook.com/davidburliuk.org" target="_blank" rel="nofollow noopener" title="davidburliuk.org")
-	a.logo(href="/" title="Home page")
+	a.logo(href="/" title="Home Page")
