--- a/jade/block/footer.jade
+++ b/jade/block/footer.jade
@@ -1,3 +1,3 @@
 .container-fluid.footer.--bg
 	a(href="http://romanvolgasov.ru/" target="_blank" rel="nofollow noopener" title="SEO / DESIGN / FRONTEND")
-		img(src="../img/logo.svg" alt="Roman Volgasov")
+		img(src="../../img/logo.svg" alt="Roman Volgasov")
