--- a/scss/block/nav.scss
+++ b/scss/block/nav.scss
@@ -3,8 +3,9 @@
 	flex-flow: column nowrap;
 	justifly-content: flex-end;
 	align-items: flex-end;
-	position: absolute;
+	position: fixed;
 	right: 0;
+	z-index: 2;
 	.nabar__toggle {
 		background-color: transparent;
 		background-image: none;
@@ -60,7 +61,8 @@
 		a {
 			color: $gray-100;
 			display: block;
-			font-size: 24px;
+			font-size: 1.5rem;
+			line-height: 1.5rem;
 			text-decoration: none;
 			position: relative;
 			transition: 0.2s;
@@ -83,6 +85,7 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		// z-index: 2;
 	}
 	.-active .overlay {
 		height: 100%;
