--- a/scss/utility/font.scss
+++ b/scss/utility/font.scss
@@ -11,20 +11,43 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-	font-size: 2.8125rem;
+	@include rfs(2.8125rem)
 	line-height: 3rem;
 	margin: 3rem 0;
 }
 
-p, a {
+h2 {
+	@include rfs(2rem)
+	line-height: 3rem;
+	margin: 1.5rem 0;
+}
+
+h3 {
+	@include rfs(1.4375rem)
+	line-height: 1.5rem;
+	margin: 1.5rem 0 0 0;
+}
+
+h4, h5 {
+	@include rfs(1rem)
+	line-height: 1.5rem;
+	margin: 1.5rem 0 0 0;
+}
+
+p, a, ol, pre, table, blockquote {
 	color: $gray-900;
-	margin-bottom: 24px;
+	margin-bottom: 1.5rem;
 	text-decoration: none;
+}
+
+ul ul, ol ol, ul ol, ol ul {
+	margin-top: 0rem;
+	margin-bottom: 0rem;
 }
 
 a {
 	position: relative;
-	padding-right: 24px;
+	padding-right: 1.5rem;
 	&:hover {
 		text-decoration: underline;
 	}
@@ -39,3 +62,26 @@ a {
 		right: 4px;
 	}
 }
+
+a, b, i, strong, em, small, code {
+	line-height: 0;
+}
+
+sub, sup {
+	line-height: 0;
+	position: relative;
+	vertical-align: baseline;
+}
+sup {
+	top: -0.5em;
+}
+sub {
+	bottom: -0.25em;
+}
+
+dt {
+	font-weight: bold;
+}
+dd {
+		margin-bottom: 1.5rem;
+	}
