--- a/index.jade
+++ b/index.jade
@@ -13,6 +13,7 @@ html(lang="ru")
 		include jade/meta/favicon.jade
 		include jade/meta/copyright.jade
 	body
+		include jade/block/nav.jade
 		include jade/block/header.jade
 		.container
 			.row
