--- a/scss/block/footer.scss
+++ b/scss/block/footer.scss
@@ -1,13 +1,14 @@
 .footer {
 	margin-top: 104px;
 	height: 45px;
-	&.--bg {
-		background-color: $gray-900;
-	}
+	background-color: $gray-900;
 	img {
 		height: 45px;
 		width: 46px;
 		float: right;
 		margin-bottom: 0;
+	}
+	a::after {
+		display: none;
 	}
 }
