--- a/scss/block/header.scss
+++ b/scss/block/header.scss
@@ -1,10 +1,12 @@
 .header {
-	min-height: 100vh;
-	margin-bottom: 80px;
-	&.--bg {
-		background-color: $gray-900;
-		background-image: url('../img/logo-white.svg');
-		background-repeat: no-repeat;
-		background-position: 50% 50%;
+	height: 0;
+	@supports (height: 100vh) {
+		min-height: 100vh;
+		margin-bottom: 80px;
 	}
+	background-color: $gray-900;
+	background-image: url('../img/logo-white.svg');
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+	// position: fixed;
 }
