--- a/jade/block/nav.jade
+++ b/jade/block/nav.jade
@@ -1,13 +1,14 @@
-.nav
+.nav_controls
 	button.nabar__toggle(onclick="Hamburger(this)")
 		span.hamburger__icon
-		.overlay
-			.overlay-content
-				a(href="/") Home
-				a(href="/biography/") Biography
-				a(href="/catalogue-raisonne/") Catalogue Raisonné
-				a(href="/contact/") Contact
-				a(href="/directors-advisors-staff/") Directors, Advisors & Staff
-				a(href="/user's-policy/") User's Policy
 	a.social(href="https://www.facebook.com/davidburliuk.org" target="_blank" rel="nofollow noopener" title="davidburliuk.org")
 	a.logo(href="/" title="Home Page")
+
+nav
+	a(href="/") Home
+	a(href="/biography/") Biography
+	a(href="/catalogue-raisonne/") Catalogue Raisonné
+	a(href="/contact/") Contact
+	a(href="/directors-advisors-staff/") Directors, Advisors & Staff
+	a(href="/user's-policy/") User's Policy
+
