--- a/scss/magnific/_settings.scss
+++ b/scss/magnific/_settings.scss
@@ -3,8 +3,8 @@
 ////////////////////////
 
 // overlay
-$mfp-overlay-color:                   $gray-100 !default;                    // Color of overlay screen
-$mfp-overlay-opacity:                 0.99 !default;                        // Opacity of overlay screen
+$mfp-overlay-color:                   #FFF !default;                    // Color of overlay screen
+$mfp-overlay-opacity:                 0.89 !default;                        // Opacity of overlay screen
 $mfp-shadow:                         none !default; // Shadow on image or iframe
 
 // spacing
