--- a/jade/block/nav-light.jade
+++ b/jade/block/nav-light.jade
@@ -1,4 +1,4 @@
-nav.dark
+nav.light
 	a(href="/") Home
 	a(href="/biography/") Biography
 	a(href="/catalogue-raisonne/") Catalogue Raisonné
@@ -6,7 +6,7 @@ nav.dark
 	a(href="/directors-advisors-staff/") Directors, Advisors & Staff
 	a(href="/user's-policy/") User's Policy
 
-.icon-container.dark
+.icon-container.light
 	a.social(href="https://www.facebook.com/davidburliuk.org" target="_blank" rel="nofollow noopener" title="davidburliuk.org")
 	a.logo(href="/" title="Home Page")
 
