--- a/scss/block/nav.scss
+++ b/scss/block/nav.scss
@@ -1,124 +1,227 @@
-.nav_controls {
+.header {
+	position: relative;
+}
+
+nav {
 	display: flex;
-	flex-flow: column nowrap;
-	justifly-content: flex-end;
-	align-items: flex-end;
-	position: fixed;
-	right: 0;
+	justify-content: flex-end;
+	flex-flow: row wrap;
+	position: absolute;
+	right: 2rem;
+	top: 2rem;
 	z-index: 2;
-	.nabar__toggle {
-		background-color: #FFF;
-		background-image: none;
-		border: 0;
-		border-radius: 50%;
-		cursor: pointer;
+
+	a {
 		display: inline-block;
-		outline: none;
-		padding: 1.5rem;
-		text-align: center;
-		touch-action: manipulation;
-		vertical-align: middle;
-		white-space: nowrap;
-		user-select: none;
-		margin: 1rem 1rem 0 0;
-		&.-active {
-			background-color: transparent;
-		}
-		&.-active .hamburger__icon {
-			background-color: transparent;
-			&::before {
-				background-color: $gray-100;
-				transform: translateY(7px) rotate(45deg);
-			}
-			&::after {
-				background-color: $gray-100;
-				transform: translateY(-8px) rotate(-45deg);
-			}
-		}
-		.hamburger__icon {
-			position: relative;
-			margin-top: 0.5rem;
-			margin-bottom: 0.5rem;
-			&,
-			&::before,
-			&::after {
-				background-color: $gray-900;
-				display: block;
-				height: 2px;
-				transition: background-color 0.1s linear, transform 0.1s linear;
-				width: 1.5rem;
-			}
-			&::before, &::after {
-				content: "";
-				position: absolute;
-			}
-			&::before {
-				top: -0.5rem;
-			}
-			&:after {
-				top: 0.5rem;
-			}
+		font-size: 1.5rem;
+		flex-flow: row nowrap;
+		line-height: 1.5rem;
+		text-decoration: none;
+		margin-right: 1rem;
+		margin-top: 2rem;
+		&::after {
+			content: none;
 		}
 	}
+	&.dark {
+		a {
+			color: #FFF;
+		}
+	}
+	&.light {
+		a {
+			color: $gray-900;
+		}
+	}
+}
 
-	.social {
-		background-image: url('../img/facebook-square-brands-dark.svg');
+.icon-container {
+	align-items: flex-end;
+	display: flex;
+	justify-content: flex-end;
+	flex-flow: column wrap;
+	a::after {
+		content: none;
+	}
+	a.social {
 		background-repeat: no-repeat;
 		height: 1.5rem;
 		width: 1.5rem;
-		margin-right: 2.5rem;
-		margin-top: 1rem;
+		margin-right: 5.3rem;
+		margin-top: 8rem;
 	}
-	.logo {
+	&.dark a.social {
+
+	}
+	&.dark a.logo {
+		background-image: url('../../img/logo-white.svg');
+	}
+	&.light a.social {
+		background-image: url('../../img/facebook-square-brands-dark.svg');
+	}
+	&.light a.logo {
+		background-image: url('../../img/logo-dark.svg');
+	}
+	a.logo {
 		padding: 0px;
-		background-image: url('../img/logo-dark.svg');
 		background-repeat: no-repeat;
 		height: 56px;
 		width: 26px;
-		margin-right: 2.5rem;
+		margin-right: 5rem;
 		margin-top: 1rem;
+		
+		&.light {
+			background-image: url('../../img/logo-white.svg');
+		}
 	}
 
 	.social,
 	.logo {
 		padding: 0;
+		display: inline-block;
+		z-index: 2;
 		&::after {
 			display: none !important;
 		}
+	}
+	&.dark {
+		a {
+			color: #FFF;
+		}
+	}
+	
+	p {
+		margin-right: 1rem;
+		margin-top: 2rem;
+	}
+	a {
+		font-size: 1.5rem;
+		line-height: 1.5rem;
+		
 	}
 }
 
-nav {
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	background-color:rgba(0,0,0,.8);
-	opacity: 0;
-	visibility: hidden;
-	transition: all .5s ease;
-	z-index: 1;
-	text-align: center;
-	height: 100vh;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	&.show {
-		opacity: 1;
-		visibility: visible;
-	}
-	a {
-		color: $gray-100;
-		font-size: 1.5rem;
-		line-height: 1.5rem;
-		padding: 0;
-		&:hover {
-			text-decoration: none;
-			opacity: 0.7;
-		}
-		&::after {
-			display: none !important;
-		}
-	}
-}
+// .nav_controls {
+// 	// display: flex;
+// 	// flex-flow: column nowrap;
+// 	// justifly-content: flex-end;
+// 	// align-items: flex-end;
+// 	// position: fixed;
+// 	// right: 0;
+// 	// z-index: 2;
+// 	// .nabar__toggle {
+// 	// 	background-color: #FFF;
+// 	// 	background-image: none;
+// 	// 	border: 0;
+// 	// 	border-radius: 50%;
+// 	// 	cursor: pointer;
+// 	// 	display: inline-block;
+// 	// 	outline: none;
+// 	// 	padding: 1.5rem;
+// 	// 	text-align: center;
+// 	// 	touch-action: manipulation;
+// 	// 	vertical-align: middle;
+// 	// 	white-space: nowrap;
+// 	// 	user-select: none;
+// 	// 	margin: 1rem 1rem 0 0;
+// 	// 	&.-active {
+// 	// 		background-color: transparent;
+// 	// 	}
+// 	// 	&.-active .hamburger__icon {
+// 	// 		background-color: transparent;
+// 	// 		&::before {
+// 	// 			background-color: $gray-100;
+// 	// 			transform: translateY(7px) rotate(45deg);
+// 	// 		}
+// 	// 		&::after {
+// 	// 			background-color: $gray-100;
+// 	// 			transform: translateY(-8px) rotate(-45deg);
+// 	// 		}
+// 	// 	}
+// 	// 	.hamburger__icon {
+// 	// 		position: relative;
+// 	// 		margin-top: 0.5rem;
+// 	// 		margin-bottom: 0.5rem;
+// 	// 		&,
+// 	// 		&::before,
+// 	// 		&::after {
+// 	// 			background-color: $gray-900;
+// 	// 			display: block;
+// 	// 			height: 2px;
+// 	// 			transition: background-color 0.1s linear, transform 0.1s linear;
+// 	// 			width: 1.5rem;
+// 	// 		}
+// 	// 		&::before, &::after {
+// 	// 			content: "";
+// 	// 			position: absolute;
+// 	// 		}
+// 	// 		&::before {
+// 	// 			top: -0.5rem;
+// 	// 		}
+// 	// 		&:after {
+// 	// 			top: 0.5rem;
+// 	// 		}
+// 	// 	}
+// 	// }
+
+// 	// .social {
+// 	// 	background-image: url('../img/facebook-square-brands-dark.svg');
+// 	// 	background-repeat: no-repeat;
+// 	// 	height: 1.5rem;
+// 	// 	width: 1.5rem;
+// 	// 	margin-right: 2.5rem;
+// 	// 	margin-top: 1rem;
+// 	// }
+// 	// .logo {
+// 	// 	padding: 0px;
+// 	// 	background-image: url('../img/logo-dark.svg');
+// 	// 	background-repeat: no-repeat;
+// 	// 	height: 56px;
+// 	// 	width: 26px;
+// 	// 	margin-right: 2.5rem;
+// 	// 	margin-top: 1rem;
+// 	// }
+
+// 	// .social,
+// 	// .logo {
+// 	// 	padding: 0;
+// 	// 	&::after {
+// 	// 		display: none !important;
+// 	// 	}
+// 	// }
+// }
+
+// nav {
+// 	position: fixed;
+// 	width: 100%;
+// 	height: 100%;
+// 	top: 0;
+// 	left: 0;
+// 	background-color:rgba(0,0,0,.8);
+// 	opacity: 0;
+// 	visibility: hidden;
+// 	transition: all .5s ease;
+// 	z-index: 1;
+// 	text-align: center;
+// 	height: 100vh;
+// 	display: flex;
+// 	flex-direction: column;
+// 	justify-content: center;
+// 	&.show {
+// 		opacity: 1;
+// 		visibility: visible;
+// 	}
+// 	a {
+// 		color: $gray-100;
+// 		font-size: 1.5rem;
+// 		line-height: 1.5rem;
+// 		padding: 0;
+// 		&:hover {
+// 			text-decoration: none;
+// 			opacity: 0.7;
+// 		}
+// 		&::after {
+// 			display: none !important;
+// 		}
+// 	}
+// }
