--- a/directors-advisors-staff/index.jade
+++ b/directors-advisors-staff/index.jade
@@ -13,7 +13,7 @@ html(lang="ru")
 		include ../jade/meta/favicon.jade
 		include ../jade/meta/copyright.jade
 	body
-		include ../jade/block/nav.jade
+		include ../jade/block/nav-light.jade
 		.container.main
 			.row
 				.offset-md-3.col-md-9.col-10
