Всё готово к интеграции с WP

--- a/jade/block/nav-light.jade
+++ b/jade/block/nav-light.jade
@@ -1,12 +1,14 @@
-nav.light
-	a(href="/") Home
-	a(href="/biography/") Biography
-	a(href="/catalogue-raisonne/") Catalogue Raisonné
-	a(href="/contact/") Contact
-	a(href="/directors-advisors-staff/") Directors, Advisors & Staff
-	a(href="/user's-policy/") User's Policy
+.container-fluid
+	nav.light
+		a(href="/") Home
+		a(href="/biography/") Biography
+		a(href="/catalogue-raisonne/") Catalogue Raisonné
+		a(href="/contact/") Contact
+		a(href="/directors-advisors-staff/") Directors, Advisors & Staff
+		a(href="/user's-policy/") User's Policy
+	.icon-container.light
+		a.social(href="https://www.facebook.com/davidburliuk.org" target="_blank" rel="nofollow noopener" title="davidburliuk.org")
+		a.logo(href="/" title="Home Page")
 
-.icon-container.light
-	a.social(href="https://www.facebook.com/davidburliuk.org" target="_blank" rel="nofollow noopener" title="davidburliuk.org")
-	a.logo(href="/" title="Home Page")
+	
 
