--- a/jade/block/footer.jade
+++ b/jade/block/footer.jade
@@ -1,3 +1,9 @@
-.container-fluid.footer.--bg
-	a(href="http://romanvolgasov.ru/" target="_blank" rel="nofollow noopener" title="SEO / DESIGN / FRONTEND")
-		img(src="../../img/logo.svg" alt="Roman Volgasov")
+.footer.--bg
+	.container-fluid
+		.container
+			.row
+				.offset-md-2.col-md-4.col-6.link
+					a(href="/user-s-policy/") User's Policy
+				.offset-md-2.col-md-4.col-6.author
+					a(href="http://romanvolgasov.ru/" target="_blank" rel="nofollow noopener" title="Roman Volgasov web-developer")
+						img(src="../../img/rv.svg" alt="Roman Volgasov")
