--- a/scss/block/nav.scss
+++ b/scss/block/nav.scss
@@ -1,229 +1,161 @@
-.header {
-	position: relative;
+$menu-height: 64px;
+
+.navbar__wrapper {
+	background-color: $primary;
+	box-shadow: $primary-shadow;
+	.navbar {
+		justify-content: space-between;
+	}
 }
 
-nav {
+.navbar__area {
+	align-items: stretch;
 	display: flex;
-	justify-content: flex-end;
 	flex-flow: row wrap;
-	position: relative;
-	right: 2rem;
-	top: 2rem;
-	z-index: 2;
-	margin-bottom: 4rem;
+	margin-left: auto;
+	margin-right: auto;
+	@media (min-width: 576px) { width: 540px; }
+	@media (min-width: 768px) {
+		align-items: center;
+		width: 720px;
+	}
+	@media (min-width: 992px) {
+		width: 960px;
+	}
+	@media (min-width: 1200px) {
+		width: 1140px;
+	}
 	a {
-		display: inline-block;
-		font-size: 1.5rem;
-		flex-flow: row nowrap;
-		line-height: 1.5rem;
+		color: $white;
 		text-decoration: none;
-		margin-right: 1rem;
-		margin-top: 2rem;
-		&::after {
-			content: none;
-		}
 	}
-	&.dark {
-		a {
-			color: #FFF;
-		}
+	.navbar__brand {
+		align-self: center;
+		color: $white;
+		display: block;
+		font-size: 16px;
+		margin: round(($menu-height - 20) / 2);
 	}
-	&.light {
-		a {
-			color: $gray-900;
-		}
-	}
-}
-
-.icon-container {
-	align-items: flex-end;
-	display: flex;
-	justify-content: flex-end;
-	flex-flow: column wrap;
-	position: absolute;
-	right: 0;
-	a::after {
-		content: none;
-	}
-	a.social {
-		background-repeat: no-repeat;
-		height: 1.5rem;
-		width: 1.5rem;
-		margin-right: 5.5rem;
-		margin-top: 0;
-	}
-	&.dark a.social {
-		background-image: url('../../img/facebook-square-brands.svg');
-	}
-	&.dark a.logo {
-		background-image: url('../../img/logo-white.svg');
-	}
-	&.light a.social {
-		background-image: url('../../img/facebook-square-brands-dark.svg');
-	}
-	&.light a.logo {
-		background-image: url('../../img/logo-dark.svg');
-	}
-	a.logo {
-		padding: 0px;
-		background-repeat: no-repeat;
-		height: 56px;
-		width: 26px;
-		margin-right: 5.3rem;
-		margin-top: 1rem;
-		
-		&.light {
-			background-image: url('../../img/logo-white.svg');
-		}
-	}
-
-	.social,
-	.logo {
-		padding: 0;
+	.nabar__toggle {
+		background-color: transparent;
+		background-image: none;
+		border: 0;
+		cursor: pointer;
 		display: inline-block;
-		z-index: 2;
-		&::after {
-			display: none !important;
+		outline: none;
+		padding: round(($menu-height - 20) / 2);
+		text-align: center;
+		touch-action: manipulation;
+		vertical-align: middle;
+		white-space: nowrap;
+		user-select: none;
+		&.-active .hamburger__icon {
+			background-color: transparent;
+			&::before {
+				transform: translateY(7px) rotate(45deg);
+			}
+			&::after {
+				transform: translateY(-8px) rotate(-45deg);
+			}
+		}
+		@media (min-width: 768px) {
+			display: none;
+		}
+		.hamburger__icon {
+			position: relative;
+			margin-top: 0.5rem;
+			margin-bottom: 0.5rem;
+			&,
+			&::before,
+			&::after {
+				background-color: #FFFFFF;
+				display: block;
+				height: 2px;
+				transition: background-color 0.1s linear, transform 0.1s linear;
+				width: 1.5rem;
+			}
+			&::before, &::after {
+				content: "";
+				position: absolute;
+			}
+			&::before {
+				top: -0.5rem;
+			}
+			&:after {
+				top: 0.5rem;
+			}
 		}
 	}
-	&.dark {
-		a {
-			color: #FFF;
+	.navbar__list {
+		align-items: center;
+		display: none;
+		flex-flow: row nowrap;
+		white-space: nowrap;
+		@media (min-width: 768px) {
+			display: flex;
+
 		}
-	}
-	
-	p {
-		margin-right: 1rem;
-		margin-top: 2rem;
-	}
-	a {
-		font-size: 1.5rem;
-		line-height: 1.5rem;
-		
+		@media (max-width: 768px) {
+			background-color: $primary;
+			box-shadow: $primary-shadow;
+			left: 0;
+			justify-content: center;
+			overflow-y: hidden;
+			overflow-x: auto;
+			position: fixed;
+			top: $menu-height - 2px;
+			width: 100%;
+		}
+		@media (max-width: 576px) {
+			justify-content: space-between;
+		}
+		&.-on {
+			display: flex;
+			z-index: 100;
+		}
+		.nabar__item {
+			color: $white;
+			display: block;
+			height: $menu-height;
+			flex-shrink: 0;
+			font-size: 14px;
+			line-height: $menu-height + 4px;
+			padding-left: round(($menu-height - 20) / 2);
+			padding-right: round(($menu-height - 20) / 2);
+			position: relative;
+			margin-bottom: 0;
+			transition: color .2s linear;
+			&.fb {
+				background-image: url('/img/fb-white.svg');
+				background-repeat: no-repeat;
+				background-position: 50% 50%;
+				&:hover {
+					&::after {
+						content: none;
+					}
+				}
+			}
+			&::after {
+				content: "";
+				border-bottom: 2px solid $hover;
+				bottom: 0;
+				left: 50%;
+				position: absolute;
+				transition: .2s ease-in-out;
+				width: 0;
+			}
+			&:hover {
+				color: $hover;
+				&::after {
+					content: "";
+					border-bottom: 2px solid $hover;
+					bottom: 0;
+					left: 0;
+					position: absolute;
+					transition: .2s ease-in-out;
+					width: 100%;
+				}
+			}
+		}
 	}
 }
-
-// .nav_controls {
-// 	// display: flex;
-// 	// flex-flow: column nowrap;
-// 	// justifly-content: flex-end;
-// 	// align-items: flex-end;
-// 	// position: fixed;
-// 	// right: 0;
-// 	// z-index: 2;
-// 	// .nabar__toggle {
-// 	// 	background-color: #FFF;
-// 	// 	background-image: none;
-// 	// 	border: 0;
-// 	// 	border-radius: 50%;
-// 	// 	cursor: pointer;
-// 	// 	display: inline-block;
-// 	// 	outline: none;
-// 	// 	padding: 1.5rem;
-// 	// 	text-align: center;
-// 	// 	touch-action: manipulation;
-// 	// 	vertical-align: middle;
-// 	// 	white-space: nowrap;
-// 	// 	user-select: none;
-// 	// 	margin: 1rem 1rem 0 0;
-// 	// 	&.-active {
-// 	// 		background-color: transparent;
-// 	// 	}
-// 	// 	&.-active .hamburger__icon {
-// 	// 		background-color: transparent;
-// 	// 		&::before {
-// 	// 			background-color: $gray-100;
-// 	// 			transform: translateY(7px) rotate(45deg);
-// 	// 		}
-// 	// 		&::after {
-// 	// 			background-color: $gray-100;
-// 	// 			transform: translateY(-8px) rotate(-45deg);
-// 	// 		}
-// 	// 	}
-// 	// 	.hamburger__icon {
-// 	// 		position: relative;
-// 	// 		margin-top: 0.5rem;
-// 	// 		margin-bottom: 0.5rem;
-// 	// 		&,
-// 	// 		&::before,
-// 	// 		&::after {
-// 	// 			background-color: $gray-900;
-// 	// 			display: block;
-// 	// 			height: 2px;
-// 	// 			transition: background-color 0.1s linear, transform 0.1s linear;
-// 	// 			width: 1.5rem;
-// 	// 		}
-// 	// 		&::before, &::after {
-// 	// 			content: "";
-// 	// 			position: absolute;
-// 	// 		}
-// 	// 		&::before {
-// 	// 			top: -0.5rem;
-// 	// 		}
-// 	// 		&:after {
-// 	// 			top: 0.5rem;
-// 	// 		}
-// 	// 	}
-// 	// }
-
-// 	// .social {
-// 	// 	background-image: url('../img/facebook-square-brands-dark.svg');
-// 	// 	background-repeat: no-repeat;
-// 	// 	height: 1.5rem;
-// 	// 	width: 1.5rem;
-// 	// 	margin-right: 2.5rem;
-// 	// 	margin-top: 1rem;
-// 	// }
-// 	// .logo {
-// 	// 	padding: 0px;
-// 	// 	background-image: url('../img/logo-dark.svg');
-// 	// 	background-repeat: no-repeat;
-// 	// 	height: 56px;
-// 	// 	width: 26px;
-// 	// 	margin-right: 2.5rem;
-// 	// 	margin-top: 1rem;
-// 	// }
-
-// 	// .social,
-// 	// .logo {
-// 	// 	padding: 0;
-// 	// 	&::after {
-// 	// 		display: none !important;
-// 	// 	}
-// 	// }
-// }
-
-// nav {
-// 	position: fixed;
-// 	width: 100%;
-// 	height: 100%;
-// 	top: 0;
-// 	left: 0;
-// 	background-color:rgba(0,0,0,.8);
-// 	opacity: 0;
-// 	visibility: hidden;
-// 	transition: all .5s ease;
-// 	z-index: 1;
-// 	text-align: center;
-// 	height: 100vh;
-// 	display: flex;
-// 	flex-direction: column;
-// 	justify-content: center;
-// 	&.show {
-// 		opacity: 1;
-// 		visibility: visible;
-// 	}
-// 	a {
-// 		color: $gray-100;
-// 		font-size: 1.5rem;
-// 		line-height: 1.5rem;
-// 		padding: 0;
-// 		&:hover {
-// 			text-decoration: none;
-// 			opacity: 0.7;
-// 		}
-// 		&::after {
-// 			display: none !important;
-// 		}
-// 	}
-// }
