--- a/scss/utility/font.scss
+++ b/scss/utility/font.scss
@@ -66,7 +66,9 @@ a {
 a, b, i, strong, em, small, code {
 	line-height: 0;
 }
-
+strong {
+	font-weight: bold;
+}
 sub, sup {
 	line-height: 0;
 	position: relative;
