Адаптировал вёрстку под WP

--- a/scss/block/nav.scss
+++ b/scss/block/nav.scss
@@ -113,7 +113,7 @@ $menu-height: 64px;
 			display: flex;
 			z-index: 100;
 		}
-		.nabar__item {
+		a {
 			color: $white;
 			display: block;
 			height: $menu-height;
